Changed Mac ordered list & Added Windows Section

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
             <img height="200px" src="https://th.bing.com/th/id/OIP.bpJjpxujKcWAbSbsYMijNgHaEK?pid=ImgDet&rs=1">
             <p>Not ready to go all in? Combine the set-up you already have with a Mac Mini</p>
         </div>
-        <h3>Top 3 Laptops</h3>
+        <h3>Top 3 Computers</h3>
         <ol>
-            <li>MacBook Air (13.3")</li>
-            <li>MacBook Pro (13.3")</li>
-            <li>MacBook Pro (16.2")</li>
+            <li>iMac</li>
+            <li>MacBook Pro</li>
+            <li>Mac Mini</li>
         </ol>
         <h3>Prices</h3>
         <ul>
@@ -29,9 +29,34 @@
             <li>$1299+</li>
             <li>1999+</li>
         </ul>
-        <a id="applelink" href="https://www.apple.com/">Apple's Website</a>
+        <a id="apple-link" href="https://www.apple.com/">Apple's Website</a>
     </div>
     <div id="windows" class="laptops">
-
+        <h1>You can get a PC for...</h1>
+        <div class="pcs" id="gaming">
+            <img height="200px" src="https://www.zdnet.com/a/hub/i/2019/08/20/e71ae67d-6cd1-4340-9ade-7defa108f737/alienware-aurora-r9-gaming-desktop-pc-gamescom.png">
+            <p>Crushing your virtual enemies at home while admiring cool RGB lights </p>
+        </div>
+        <div class="pcs" id="portable">
+            <img height="200px" src="https://m.media-amazon.com/images/I/61GiHb6bWTL._AC_SL1500_.jpg">
+            <p>Finishing that project last minute at starbucks</p>
+        </div>
+        <div class="pcs" id="perfomace-portable">
+            <img height="200px" src="https://th.bing.com/th/id/OIP.Vajy54XE5CWNa6gjSJ_QywHaE8?pid=ImgDet&rs=1">
+            <p>Or bringing the coolest looking laptop to the LAN Party</p>
+        </div>
+        <h3>Top 3 Computers</h3>
+        <ol>
+            <li>Alienware Aurora R14</li>
+            <li>Microsoft Surface Pro 8</li>
+            <li>MSi GE76 Raider</li>
+        </ol>
+        <h3>Prices</h3>
+        <ul>
+            <li>$3,699</li>
+            <li>$899</li>
+            <li>$2,999</li>
+        </ul>
+        <a id="windows-link" href="https://www.microsoft.com/">Microsoft's Website</a>
     </div>
 </body>
